gccida/g2/verify_flow_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2118:4: error: expected ';' after expression
rtx v46; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2118:5: error: use of undeclared identifier 'v46'
rtx v46; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2121:4: error: expected ';' after expression
rtx x; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2121:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+10h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2125:1: error: use of undeclared identifier 'x'
x = get_insns( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2127:17: error: expected identifier or '('
 struct bb_info = ( basic_block *)xcalloc( max_uid, 8uLL); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2157:19: error: expected ';' after expression
last_insn = ( rtx)last_insn[1]; 
                  ^
                  ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2178:19: error: expected ';' after expression
last_insn = ( rtx)last_insn[1]; 
                  ^
                  ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2253:53: error: too many arguments provided to function-like macro invocation
fatal_insn( "wrong insn in the fallthru edge", rtx, "cfgrtl.c", 1717, "verify_flow_info"); 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2253:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "wrong insn in the fallthru edge", rtx, "cfgrtl.c", 1717, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2296:30: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct edge_def *')
v6[*( int *)( v29 + 88) + 2] -= k; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2334:66: error: too many arguments provided to function-like macro invocation
fatal_insn( "flow control insn inside a basic block", ( rtx)v31, "cfgrtl.c", 1829, "verify_flow_info"); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2334:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "flow control insn inside a basic block", ( rtx)v31, "cfgrtl.c", 1829, "verify_flow_info"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2358:18: error: expected ')'
debug_rtx( ( rtx)v31); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2358:10: note: to match this '('
debug_rtx( ( rtx)v31); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2400:13: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'edge' (aka 'struct edge_def *'))
v6[v38 + 2] -= n; 
~~~~~~~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2419:6: error: use of undeclared identifier 'x'
if ( x ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2421:18: error: use of undeclared identifier 'x'
v41 = *( _WORD *)x; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2428:6: error: use of undeclared identifier 'x'
if ( x[2].fld[0].rtint == -80 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/cfgrtl.c:2431:33: error: use of undeclared identifier 'x'
if ( *( _DWORD *)( *( _QWORD *)&x[2] + 88LL) != ++v43 ) 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_flow_info/src/obj/cfgrtl.o] Error 1
